--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clicky",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://NateNi.github.io/clicky",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -11,15 +12,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
+  }
 }
