--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "clicky",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://NateNi.github.io/clicky",
+  "homepage": "https://NateNi.github.io/clicky",
   "dependencies": {
+    "gh-pages":"2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
@@ -15,17 +16,5 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.2.0"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
